fix word wrapping issues when viewing on mobile.

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Helvetica;
+    font-family: Helvetica, sans-serif;
 }
 
 h1 {
@@ -8,6 +8,7 @@ h1 {
     color: khaki;
     background-image: url(../images/pattern.jpeg);
     text-align: center;
+    word-wrap: break-word;
 }
 
 h2 {
